# Copyright (C) 2016 INFRAWARE, Inc. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

import("//build/config/features.gni")
import("//mojo/public/tools/bindings/mojom.gni")

component("calendar") {
  output_name = "device_calendar"

  sources = [
    "calendar_export.h",
    "calendar_manager_impl.h",
    "calendar_manager_impl_default.cc",
  ]

  defines = [ "DEVICE_CALENDAR_IMPLEMENTATION" ]

  deps = [
    ":mojo_bindings",
    "//base",
    "//base/third_party/dynamic_annotations",
    "//mojo/environment:chromium",
    "//mojo/public/cpp/bindings",
    "//third_party/mojo/src/mojo/edk/system",
  ]

  if (is_android) {
    sources -= [ "calendar_manager_impl_default.cc" ]
  }
}

mojom("mojo_bindings") {
  sources = [
    "calendar_ResultCode.mojom",
    "calendar_manager.mojom",
  ]
}
