# Copyright (C) 2016 INFRAWARE, Inc. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

import("//build/config/features.gni")
import("//mojo/public/tools/bindings/mojom.gni")

component("contact") {
  output_name = "device_contact"

  sources = [
    "contact_export.h",
    "contact_manager_impl.h",
    "contact_manager_impl_default.cc",
  ]

  defines = [ "DEVICE_CONTACT_IMPLEMENTATION" ]

  deps = [
    ":mojo_bindings",
    "//base",
    "//base/third_party/dynamic_annotations",
    "//mojo/environment:chromium",
    "//mojo/public/cpp/bindings",
    "//third_party/mojo/src/mojo/edk/system",
  ]

  if (is_android) {
    sources -= [ "contact_manager_impl_default.cc" ]
  }
}

mojom("mojo_bindings") {
  sources = [
    "contact_manager.mojom",
  ]
}
