# Copyright 2014 The Chromium Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

import("//build/config/ui.gni")

component("opencl") {
  sources = [
    "opencl_implementation.cc",
    "opencl_implementation.h",
    "opencl_include.h",
  ]

  public_configs = [ "//third_party/khronos:khronos_headers", "//skia:skia_config" ]

  deps = [
    "//base",
    "//ui/accessibility",
  ]

  defines = [ "OPENCL_IMPLMENTATION" ]
}
