# Copyright (C) 2016 INFRAWARE, Inc. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

import("//build/config/android/config.gni")
import("//build/config/android/rules.gni")

android_library("messaging_manager_android") {
  java_files = [ 
    "java/src/org/chromium/device/messaging/MessagingConstantsAndroid.java",
    "java/src/org/chromium/device/messaging/MessagingHandlerAndroid.java",
    "java/src/org/chromium/device/messaging/MessagingManagerImpl.java",
    "java/src/org/chromium/device/messaging/MessagingObserverAndroid.java",
    "java/src/org/chromium/device/messaging/OnMessagingResultListener.java",
    "java/src/org/chromium/device/messaging/OnMessagingWorkerListener.java",
    "java/src/org/chromium/device/messaging/Utils.java",
    "java/src/org/chromium/device/messaging/helper/AbstractMessagingHelper.java",
    "java/src/org/chromium/device/messaging/helper/EmptyMessagingHelper.java",
    "java/src/org/chromium/device/messaging/helper/MessagingHelperFactory.java",
    "java/src/org/chromium/device/messaging/helper/MessagingHelper_SM_T715.java",
    "java/src/org/chromium/device/messaging/object/MessageFindOptionsAndroid.java",
    "java/src/org/chromium/device/messaging/object/MessageObjectAndroid.java",
    "java/src/org/chromium/device/messaging/worker/AbstractMessagingWorker.java",
    "java/src/org/chromium/device/messaging/worker/FindMessageWorker.java",
    "java/src/org/chromium/device/messaging/worker/SendMessageWorker.java",
  ]

  deps = [
    "//base:base_java",
    "//device/messaging:mojo_bindings_java",
    "//mojo/public/java:bindings",
    "//mojo/public/java:system",
  ]
}
